<!--
  ~ Copyright (c) 2015. This product is a brain-product of Jacob Langholz, Jonathan Coons, and Caleb Jaeger. The collective content within was created by them and them alone to fulfill the requirements of the mobile gps application project for TCSS 450.
  -->

<resources>
    <string name="app_name">Sly</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Registration</string>
    <string name="title_activity_load_screen" translatable="false">LoadScreenActivity</string>
    <string name="title_activity_my_account">My Account</string>
    <string name="web_service_protocol" translatable="false">http</string>
    <string name="web_service_url" translatable="false">450.atwebpages.com</string>
    <string name="title_activity_movement_data">Movement Data</string>
    <string name="terms_of_service">Terms of Service
        We reserve the right to capture and use any and all user and
        location data. By checking this box, you are agreeing to provide us with the aforementioned
        information, and that we are not liable for any damages that could be caused by such.
        </string>

    <string name="login_login_button_message">Logging in.</string>
    <string name="login_register_button_message">Opening registration.</string>
    <string name="login_reset_password_button_message">Opening password reset.</string>

    <string name="web_service_add_user">adduser.php</string>
    <string name="web_service_reset">reset.php</string>
    <string name="web_service_login">login.php</string>
    <string name="web_service_view">view.php</string>
    <string name="web_service_agreement">agreement.php</string>
    <string name="web_service_result">result</string>
    <string name="web_service_success">success</string>
    <string name="web_service_userid">userid</string>
    <string name="web_service_error">error</string>
    <string name="web_service_success_message">Success: Email sent</string>
    <string name="web_service_error_message">Server Error, Please try again later</string>
    <string name="web_service_parameter_email">email</string>
    <string name="web_service_parameter_password">password</string>
    <string name="web_service_parameter_question">question</string>
    <string name="web_service_parameter_answer">answer</string>
    <string name="web_service_string_format">UTF-8</string>
    <string name="web_service_uid">uid</string>
    <string name="web_service_start">start</string>
    <string name="web_service_end">end</string>
    <string name="web_service_points">points</string>
    <string name="web_service_latitude">lat</string>
    <string name="web_service_longitude">lon</string>
    <string name="web_service_time">timestamp</string>

    <string name="shared_preferences_name">tcss450.gps_app_phase_i</string>
    <string name="shared_preferences_user_ID">ID</string>
    <string name="shared_preferences_user_email">Email</string>
    <string name="shared_preferences_start">startTime</string>
    <string name="shared_preferences_end">endTime</string>
    <string name="shared_preferences_interval">interval</string>

    <string name="date_picker_start">Start Date</string>
    <string name="date_picker_end">End Date</string>

    <string name="date_picker_last_seven">Last 7 days shown</string>
    <string name="date_picker_day_before">Showing 1 day before end date</string>
    <string name="date_picker_day_after">Showing 1 day past start date</string>

    <string name="GPS_off">GPS turned off</string>
    <string name="GPS_on">GPS turned on</string>

    <!--<string name="DB_name">LOCALDATA.db</string>-->
    <!--<string name="map_data_table_name">LOCAL_MAP_DATA</string>-->


    <string name="movement_data_latitude">Latitude</string>
    <string name="movement_data_longitude">Longitude</string>
    <string name="movement_data_time">Time Stamp</string>

    <string name="forgot_password_cancel_message">Password reset cancelled.</string>
    <string name="forgot_password_instructions">An email will be sent to your email account with your password information.</string>
    <string name="forgot_password_reset">Reset Password</string>
    <string name="forgot_password_cancel">Cancel</string>
    <string name="forgot_password_prompt_email">Enter your email</string>

    <string name="register_email_prompt">Enter your email.</string>
    <string name="register_password_prompt">Enter a password.</string>
    <string name="register_retype_password_prompt">Retype the password.</string>
    <string name="register_security_question_prompt">Enter a security question.</string>
    <string name="register_security_question_answer_prompt">Enter the answer to the question.</string>
    <string name="register_agreement">Check here to confirm that you have read and agree to the above Terms of Service.</string>

    <string name="my_account">My Account</string>
    <string name="my_account_start_date">Start date</string>
    <string name="my_account_start_date_label">Start date: </string>
    <string name="my_account_start_date_message">Selecting start date.</string>
    <string name="my_account_end_date">End date</string>
    <string name="my_account_end_date_label">End date: </string>
    <string name="my_account_end_date_message">Selecting end date.</string>
    <string name="my_account_logout">Logout</string>
    <string name="my_account_logout_message">Logging out.</string>
    <string name="my_account_tracking_data">View tracking data</string>
    <string name="my_account_tracking_data_message">Displaying data.</string>

    <string name="validate_email_blank">Email can\'t be blank</string>
    <string name="validate_email_invalid_symbols">Email can\'t contain: +-,!#$%^*();\/|&quot;&apos;&lt;&gt;&amp;</string>
    <string name="validate_email_no_user">Email needs to have a user</string>
    <string name="validate_email_no_at">Email needs an \'@\' symbol</string>
    <string name="validate_email_no_domain_name">Email needs a domain name</string>
    <string name="validate_email_no_dot">Email needs a \'.\' after the domain name</string>
    <string name="validate_email_no_top_domain">Email needs a valid top level domain</string>
    <string name="validate_email_not_valid">Not a valid email</string>
    <string name="validate_password_short">Password Is Too Short</string>
    <string name="validate_password_upper_case">Password Must contain an upper case letter</string>
    <string name="validate_password_lower_case">Password Must contain a Lower case letter</string>
    <string name="validate_password_symbol">Password Must contain one of the following: +-.,!@#$%^&amp;*();\/|&lt;&gt;&quot;&apos;</string>
    <string name="validate_bad_email_password">Incorrect Email/Password combination</string>
    <string name="validate_password_no_match">Passwords do not match</string>
    <string name="validate_password_not_valid">Not a valid password</string>
    <string name="validate_question">Question is too short</string>
    <string name="validate_answer">Answer is too short</string>
    
    <string name="settings_data">Only upload on wifi</string>
    <string name="settings_location">Track location</string>
    <string name="settings_interval">Choose sampling interval</string>
    <string name="settings_power_save">Power Saver</string>

    <string name="title_activity_start_date">StartDate</string>
    <string name="title_activity_map_test">MapTest</string>

    <string name="hello_world">Hello world!</string>
</resources>
