<!--
  ~ Copyright (c) 2015. This product is a brain-product of Jacob Langholz, Jonathan Coons, and Caleb Jaeger. The collective content within was created by them and them alone to fulfill the requirements of the mobile gps application project for TCSS 450.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="tcss450.gps_app_phase_i.Registration">

    <EditText
        android:id="@+id/email_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/register_email_prompt"
        android:inputType="textEmailAddress"
        android:layout_alignRight="@+id/pass_prompt"
        android:layout_alignEnd="@+id/pass_prompt"/>

    <EditText
        android:id="@+id/pass_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email_prompt"
        android:ems="10"
        android:fontFamily="@string/prompt_password"
        android:hint="@string/register_password_prompt"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/pass_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pass_prompt"
        android:ems="10"
        android:fontFamily="@string/prompt_password"
        android:hint="@string/register_retype_password_prompt"
        android:inputType="textPassword"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/security_answer"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="REGISTER"/>

    <EditText
        android:id="@+id/security_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pass_confirm"
        android:hint="@string/register_security_question_prompt"
        android:layout_alignRight="@+id/pass_confirm"
        android:layout_alignEnd="@+id/pass_confirm"/>

    <EditText
        android:id="@+id/security_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/security_question"
        android:hint="@string/register_security_question_answer_prompt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <CheckBox
        android:id="@+id/terms_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/register_agreement"/>

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="android.webkit.WebViewFragment"
        android:id="@+id/eula_frag"
        android:layout_centerHorizontal="true"
        tools:layout="@layout/abc_expanded_menu_layout"
        android:layout_below="@+id/scrollView"
        android:layout_above="@+id/terms_check" />

</RelativeLayout>
