<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015. This product is a brain-product of Jacob Langholz, Jonathan Coons, and Caleb Jaeger. The collective content within was created by them and them alone to fulfill the requirements of the mobile gps application project for TCSS 450.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewSettings"
        android:layout_weight="0.07" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_location"
        android:id="@+id/switchLocation"
        android:layout_weight="0.07"
        android:checked="true" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switchPower"
        android:text="@string/settings_power_save"
        android:layout_weight="0.07"
        android:checked="false" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSeconds"
        android:digits="true"
        android:editable="true"
        android:visibility="visible"
        android:layout_weight="0.07" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarSeconds"
        android:layout_weight="0.07"
        android:max="290"
        android:contentDescription="Polling Delay (Sec)"
        android:maxHeight="1000dp" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_account_logout"
        android:textSize="20sp" />

</LinearLayout>